add live-record module